# MathCPP

./: CMakeLists.txt  Colour.hpp  Duration.hpp  Maths.hpp  Vector.hpp
